2006-10-23  Daiki Ueno  <ueno@unixuser.org>

	* mixi.el (mixi-curl-retrieve): New function.
	(mixi-retrieve-function): Don't use NOERROR arg of require.

2006-10-23  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-get-matched-items): Don't convert string to number.
	(mixi-login): Ditto.
	(mixi-make-me): Ditto.
	(mixi-friend-page): Ditto.
	(mixi-friend-list-page): Ditto.
	(mixi-diary-page): Ditto.
	(mixi-diary-list-page): Ditto.
	(mixi-community-page): Ditto.
	(mixi-community-realize): Ditto.
	(mixi-community-list-page): Ditto.
	(mixi-topic-page): Ditto.
	(mixi-topic-realize): Ditto.
	(mixi-topic-list-page): Ditto.
	(mixi-diary-comment-list-page): Ditto.
	(mixi-topic-comment-list-page): Ditto.
	(mixi-get-logs): Ditto.
	(mixi-get-comments): Ditto.

2006-10-23  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el: Try to require `url' and `w3m'.
	(mixi-get-comments): Fix typo.

2006-10-23  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-retrieve-function): New user option.
	(mixi-retrieve): Abolish.
	(mixi-w3-retrieve): New function.
	(mixi-w3m-retrieve): Ditto.
	(mixi-retrieve-1): Ditto.
	(mixi-login): Follow the change above.
	(with-mixi-retrieve): Ditto.

2006-10-23  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el: Require `url' instead of `w3m'.
	(mixi-retrieve): Follow the change above.
	(mixi-login): Ditto.
	(mixi-continuously-access-interval): Increase to 4.0.
	(mixi-verbose): Abolish.
	(mixi-friend-to-id): Ditto.
	(mixi-community-to-id): Ditto.

2006-10-22  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-make-community): New slot `members'.
	(mixi-community-members): New accessor method.
	(mixi-community-set-members): Ditto.
	(mixi-community-members-regexp): New constant.
	(mixi-community-realize): Use them.

	* mixi.el (mixi-make-community): New slot `open level'.
	(mixi-community-open-level): New accessor method.
	(mixi-community-set-open-level): Ditto.
	(mixi-community-open-level-regexp): New constant.
	(mixi-community-realize): Use them.
